# o008

./: .gitignore  Cargo.toml  README.md
migrations/: 20230405042519_initial_setup.up.sql  20230411095023_base_data_model.down.sql  20230411095023_base_data_model.up.sql
o008-action/: Cargo.toml
o008-action/src/: application.rs  builder.rs  lib.rs  repo_reference.rs  service.rs  service_version.rs  tenant.rs
o008-api/: Cargo.toml
o008-api/src/: main.rs  router.rs
o008-api/src/handler/: mod.rs  service.rs  service_version.rs
o008-business/: Cargo.toml
o008-business/src/: lib.rs
o008-business/src/action/: application.rs  builder.rs  mod.rs  service.rs  service_version.rs  tenant.rs
o008-business/src/dispatcher/: mod.rs  request_message.rs
o008-cli/: Cargo.toml
o008-cli/src/: main.rs
o008-common/: Cargo.toml
o008-common/src/: lib.rs
o008-common/src/command/: app.rs  dispatch.rs  internal.rs  mod.rs
o008-common/src/macros/: defer.rs  mod.rs
o008-common/src/request/: application.rs  builder.rs  mod.rs  repo_reference.rs  repo_reference_kind.rs  service.rs  service_version.rs  tenant.rs
o008-dal/: Cargo.toml
o008-dal/src/: error.rs  lib.rs
o008-dal/src/pg/: application.rs  builder.rs  mod.rs  repo_reference.rs  service.rs  service_version.rs  tenant.rs
o008-dispatcher/: Cargo.toml
o008-dispatcher/src/: action.rs  command_queue.rs  dispatch_channel.rs  dispatch_command.rs  dispatcher.rs  error.rs  lib.rs  message.rs
o008-dispatcher/src/action/: application.rs  builder.rs  mod.rs  service.rs  tenant.rs
o008-entity/: Cargo.toml
o008-entity/src/: error.rs  lib.rs
o008-entity/src/entity/: builder.rs
o008-entity/src/pg/: application.rs  builder.rs  mod.rs  repo_reference.rs  service.rs  service_version.rs  tenant.rs
o008-message-bus/: Cargo.toml
o008-message-bus/src/: bus.rs  handler.rs  helper.rs  lib.rs
o008-message-bus/src/action/: application.rs  builder.rs  service.rs  service_version.rs  tenant.rs
o008-message-bus/src/dispatch/: app_command.rs  handler.rs  mod.rs
o008-message-bus/src/message/: request.rs  response.rs
o008-setting/: Cargo.toml
o008-setting/src/: app_argument.rs  app_command.rs  app_config.rs  app_log_level.rs  lib.rs
