[workspace]
resolver = "2"
members = [
    ".",
    "o008-common",
    "o008-setting",
    "o008-dal",
    "o008-entity",
    "o008-cli",
    "o008-dispatcher",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/japiber/o008"
keywords = ["deployer", "builder", "api"]
categories = ["development-tools"]
authors = [
    "Juan A. Piñero Berdugo <japiber@gmail.com>"
]

