[package]
name = "o008-api"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
o008-setting = { path = "../o008-setting" }
o008-message-bus = { path = "../o008-message-bus" }
o008-common = { path = "../o008-common" }
o008-entity = { path = "../o008-entity" }
tracing = "0.1.40"
tokio = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
once_cell = "1"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
axum = { version = "0.7", features = ["tokio", "http2"] }
utoipa = { features = ["axum_extras"], version = "4.1" }
utoipa-swagger-ui = { features = ["axum", "debug-embed"], version = "5.0" }