[package]
name = "o008-business"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
o008-common = { path = "../o008-common" }
o008-setting = { path = "../o008-setting" }
o008-entity = { path = "../o008-entity" }
o008-message-bus = { path = "../o008-message-bus" }
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", features = [] }
tracing = { version = "0.1", features = ["default"] }
tokio = "1.35.1"
async-trait = "0.1.77"
