[package]
name = "o008-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
o008-setting = {path = "../o008-setting" }
o008-entity = { path = "../o008-entity" }
tracing = "0.1.40"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
