[package]
name = "o008-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
o008-setting = {path = "../o008-setting" }
o008-dispatcher = { path = "../o008-dispatcher" }
o008-common = { path = "../o008-common" }
tracing = "0.1.40"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0", features = [] }
