[package]
name = "o008-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
o008-setting = { path = "../o008-setting" }
o008-message-bus = { path = "../o008-message-bus" }
o008-common = { path = "../o008-common" }
tracing = "0.1.40"
tokio = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
once_cell = "1"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
