[package]
name = "o008-common"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
async-trait = "0.1"
utoipa = { features = ["uuid", "chrono"], version = "4.1" }
sqlx = { version = "0.7", features = ["macros"] }
