[package]
name = "o008-dal"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
o008-common = { path = "../o008-common" }
o008-setting = { path = "../o008-setting" }
uuid = { version = "1.6", features = ["v4", "v7", "macro-diagnostics", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "any", "postgres", "macros", "time", "chrono", "bigdecimal", "json", "uuid", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = { version = "0.1", features = [] }
lazy_static = { version = "1.0", features = [] }
async_once = "0.2"
log = "0.4.20"
tracing = "0.1.40"
