[package]
name = "o008-setting"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = {  version = "4.4", features = ["derive"] }
once_cell = "1.18"
